# analytics-platform

./: .coverage  .gitignore  .pre-commit-config.yaml  ADVANCED_LOGGING_ANALYSIS.md  BLACK_DEPENDENCY_FIX_REPORT.md  CALLBACK_ELIMINATION_FIX_REPORT.md  CLOSURE_PROBLEM_FIX.md  CODE_QUALITY_FINAL_REPORT.md  CODE_QUALITY_WORKFLOW.md  COHORT_ANALYSIS_MISSION_COMPLETE.md  COHORT_ANALYSIS_POLARS_SUMMARY.md  COHORT_ATTRIBUTION_FIX_SUMMARY.md  COHORT_FIX_DOCUMENTATION.md  COLUMN_NESTING_FIX_SUMMARY.md  CONFIGURE_ANALYSIS_FINAL_FIX_REPORT.md  CONFIGURE_ANALYSIS_NAVIGATION_FIX_REPORT.md  ELITE_POLARS_OPTIMIZATION_FINAL_REPORT.md  ELITE_POLARS_OPTIMIZATION_REPORT.md  ENHANCED_FUNNEL_VISUALIZER_COMPLETE.md  ENHANCED_TIMESERIES_IMPLEMENTATION.md  FALLBACK_DETECTION_TESTS.md  FALLBACK_FIX_RECOMMENDATIONS.md  FALLBACK_REPORT.md  FALLBACK_TESTING_SUMMARY.md  FINAL_STATUS_REPORT.md  FUNNEL_BUILDER_IMPROVEMENTS.md  FUNNEL_DISPLAY_FIXES_REPORT.md  FUNNEL_SUMMARY_IMPROVEMENTS_REPORT.md  FUNNEL_UI_FIXES_REPORT.md  GITHUB_ACTIONS_CI_FINAL_FIX_REPORT.md  GITHUB_ACTIONS_DEPRECATION_FIX.md  GITHUB_ACTIONS_FINAL_SUCCESS_REPORT.md  GITHUB_ACTIONS_PROBLEM_SOLVED.md  GITHUB_ACTIONS_SETUP_REPORT.md  GITHUB_ACTIONS_UPDATES.md  GITHUB_WORKFLOWS_SYNC_GUIDE.md  MISSION_COMPLETE_REPORT.md  MODERN_COHORT_COLORS_SUMMARY.md  MODERN_COHORT_HEATMAP_COLORS_FINAL.md  MODERN_FUNNEL_UI_SUMMARY.md  (+60 more)
.github/workflows/: pre-commit.yml  tests.yml
core/: __init__.py  calculator.py  config_manager.py  data_source.py
test_data/: README.md
tests/: README.md  benchmark_path_analysis.py  conftest.py  demo_enhanced_functionality.py  diagnostic_cohort_behavior.py  polars_fix.py  test_app_ui.py  test_app_ui_advanced.py  test_app_ui_phase1_golden.py  test_basic_scenarios.py  test_chart_stretching_fix.py  test_cohort_attribution_breaking.py  test_comprehensive_ui_improvements.py  test_config_manager_comprehensive.py  test_conversion_logic_debug.py  test_conversion_rate_discrepancy.py  test_conversion_rate_fix.py  test_conversion_window.py  test_counting_methods.py  test_critical_cohort_completion.py  test_data_generator.py  test_data_source_advanced.py  test_debug.py  test_edge_cases.py  test_enhanced_metrics_requirements.py  test_enhanced_timeseries_comprehensive.py  test_error_boundary_comprehensive.py  test_fallback_comprehensive.py  test_file_upload_comprehensive.py  test_funnel_calculator_comprehensive.py  test_integration_flow.py  test_json_performance.py  test_lazy_frame_bug.py  test_no_reload_improvements.py  test_path_analysis_fix.py  test_polars_engine.py  test_polars_fallback_detection.py  test_polars_pandas_comparison.py  test_polars_path_analysis.py  test_process_mining_comprehensive.py  (+12 more)
ui/: __init__.py
ui/components/: __init__.py
ui/utils/: css_styles.py
ui/visualization/: __init__.py  layout.py  themes.py  visualizer.py
